# Wraith

./: .env  README.fr.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: sync-version.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: attach.rs  connections.rs  console.rs  disk.rs  docker.rs  events.rs  firewall.rs  known_hosts.rs  lib.rs  main.rs  remote.rs  remote_admin.rs  settings.rs  ssh.rs  web_server.rs  winproc.rs
src/Components/: ConfirmDialog.tsx  ConnectionsManager.tsx  ConsoleDialog.tsx  ContainersTable.tsx  Content.tsx  ContextMenu.tsx  DataTable.tsx  Images.tsx  LoginScreen.tsx  LogsDialog.tsx  Navbar.tsx  Networks.tsx  Ports.tsx  ResourcePage.tsx  Select.tsx  ServerConsole.tsx  Settings.tsx  StatsCards.tsx  StatusBadge.tsx  Titlebar.tsx  Tooltip.tsx  Volumes.tsx  WindowResizer.tsx  icons.tsx
src/Pages/: App.css  App.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  fr.json
src/lib/: ansi.tsx  api.ts  connections.tsx  dockerData.tsx  dockerError.ts  dockerStatus.ts  systemTools.tsx  toast.tsx  update.tsx
src/types/: connection.ts  docker.ts  firewall.ts
