[package]
name = "Wraith"
version = "0.2.3"
description = "A Tauri App"
authors = ["Dubsinho"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wraith_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
russh = { version = "0.60", default-features = false, features = ["ring", "flate2", "rsa"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
